fix dropdown text wrap

--- a/src/styles/components/dropdown.scss
+++ b/src/styles/components/dropdown.scss
@@ -24,6 +24,8 @@
     display: block;
     padding: $space-vertical $space-horizontal;
     background-color: $--color-background-700;
+    white-space: nowrap;
+
     &:hover,
     &:focus {
       background-color: $--color-background-brand;
